[project]
name = "multi-agent-governance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "llama-index>=0.12.44",
    "llama-index-core>=0.12.44",
    "llama-index-llms-google-genai>=0.2.2",
    "llama-index-llms-lmstudio>=0.3.0",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.8",
]
