[project]
name = "multi-agent-governance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.15",
    "deepeval>=3.2.3",
    "docling>=2.39.0",
    "ipykernel>=6.29.5",
    "llama-index>=0.12.44",
    "llama-index-core>=0.12.44",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-llms-google-genai>=0.2.2",
    "llama-index-llms-lmstudio>=0.3.0",
    "llama-index-node-parser-docling>=0.3.2",
    "llama-index-readers-docling>=0.3.3",
    "llama-index-readers-file>=0.4.9",
    "llama-index-vector-stores-chroma>=0.4.2",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.8",
]
